--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     </header>
     <main>
         <section class="git">
-            <h2 class="git_Z">Что такое git?</h2>
-            <p class="git_T">С помощью Git программисты и разработчики ориентируются в коде и отслеживают изменения. Git помогает вернуть файлы в исходное состояние и видеть изменения, внесённые в определённый период. Разработчик выполняет разные команды (например, commit, push), а все изменения синхронизируются с центральным репозиторием.</p>
+            <div class="git-container">
+                <h2 class="git_Z">Что такое Git?</h2>
+                <p class="git_T">С помощью Git программисты и разработчики ориентируются в коде и отслеживают изменения. Git помогает вернуть файлы в исходное состояние и видеть изменения, внесённые в определённый период. Разработчик выполняет разные команды (например, commit, push), а все изменения синхронизируются с центральным репозиторием.</p>
+            </div>
+        </section>
+        <section class="Wgithub">
+                <h2 class="Wgithub_Z">Чем отличается Git от GitHub?</h2>
+                <p class="Wgithub_T">Git — это система контроля версий, а GitHub — онлайн-сервис, по сути социальная сеть. Одна из основных целей GitHub — быть единым местом для проектов с исходным кодом. Предполагается, что пользователь делится чем-то полезным, а другие люди смогут участвовать в разработке. <br> Ещё один вариант — использовать GitHub как хранилище проектов для портфолио: легко дать на них ссылку.</p>
         </section>
     </main>
 </body>
