--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
 </head>
 <body>
     <header>
-       <h1>Git Hub</h1>
+        <div class="header_container">
+            <div class="container_left">
+                <h1>GitHub</h1>
+            </div>
+            <div class="container_center">
+                <nav>
+                    <a href="#!" class="menu">Услуга</a>
+                    <a href="#!" class="menu">Услуга</a>
+                    <a href="#!" class="menu">Услуга</a>
+                    <a href="#!" class="menu">Услуга</a>
+                    <a href="#!" class="menu">Услуга</a>
+                    <a href="#!" class="menu">Услуга</a>
+                    <a href="#!" class="menu">Услуга</a>
+                    <a href="#!" class="menu">Услуга</a>
+                </nav>
+            </div>
+            <div class="container_right">
+                <img src="./github-logo_icon-icons.com_73546.svg" alt="" class="logo">
+            </div>
+    </div>
     </header>
     <main>
         <section class="git">
