--- a/index.html
+++ b/index.html
@@ -37,9 +37,20 @@
                 <p class="git_T">С помощью Git программисты и разработчики ориентируются в коде и отслеживают изменения. Git помогает вернуть файлы в исходное состояние и видеть изменения, внесённые в определённый период. Разработчик выполняет разные команды (например, commit, push), а все изменения синхронизируются с центральным репозиторием.</p>
             </div>
         </section>
+
         <section class="Wgithub">
                 <h2 class="Wgithub_Z">Чем отличается Git от GitHub?</h2>
                 <p class="Wgithub_T">Git — это система контроля версий, а GitHub — онлайн-сервис, по сути социальная сеть. Одна из основных целей GitHub — быть единым местом для проектов с исходным кодом. Предполагается, что пользователь делится чем-то полезным, а другие люди смогут участвовать в разработке. <br> Ещё один вариант — использовать GitHub как хранилище проектов для портфолио: легко дать на них ссылку.</p>
+        </section>
+
+        <section class="function">
+            <h2 class="function_Z">Основные функции GitHub</h2>
+            <p class="function_T"> <b>1.</b> <b>Хостинг репозиториев:</b> GitHub позволяет пользователям создавать публичные и приватные репозитории для хранения кода. Публичные репозитории доступны всем, а приватные — только определённым пользователям.<br><b>2.</b> <b>Версионирование:</b> Система контроля версий Git позволяет отслеживать изменения в коде, делать "откаты" к предыдущим версиям и работать с несколькими ветками разработки.<br><b>3.</b> <b>Сетевое сотрудничество:</b> GitHub позволяет разработчикам работать над одним и тем же проектом одновременно. Инструменты для совместной работы включают pull-запросы, обсуждения и код-ревью.<br><b>4.</b> <b>Issues и проекты:</b> GitHub имеет встроенные инструменты для отслеживания ошибок (issues) и управления проектами (projects), что помогает организовать работу команды.<br><b>5.</b> <b>GitHub Actions:</b> Это CI/CD инструмент, который позволяет автоматизировать процессы тестирования и развертывания. С его помощью можно настроить автоматическое выполнение скриптов при определённых событиях (например, при каждом коммите).<br><b>6.</b> <b>GitHub Pages:</b> Эта функция позволяет хостить статические веб-сайты напрямую из репозиториев. Это удобно для разработки документации, личных блогов и портфолио.<br><b>7.</b> <b>Сообщество и открытый код:</b> GitHub стал домом для множества open-source проектов. Многие разработчики используют платформу для совместной работы и обучения, участвуя в существующих проектах или создавая свои собственные.</p>
+        </section>
+
+        <section class="system">
+            <h2 class="system_Z">Система управления проектами</h2>
+            <p class="system_T"><b>•</b> <b>Issues:</b> Вы можете отслеживать баги и новые функции с использованием системы issues.<br><b>•</b> <b>Projects:</b> Инструменты для управления задачами, включая доски Kanban, помогают организовать работу над проектами.</p>
         </section>
     </main>
 </body>
