--- a/index.html
+++ b/index.html
@@ -52,6 +52,30 @@
             <h2 class="system_Z">Система управления проектами</h2>
             <p class="system_T"><b>•</b> <b>Issues:</b> Вы можете отслеживать баги и новые функции с использованием системы issues.<br><b>•</b> <b>Projects:</b> Инструменты для управления задачами, включая доски Kanban, помогают организовать работу над проектами.</p>
         </section>
+
+        <section class="comunity">
+            <h2 class="comunity_Z">Сообщество и открытый код</h2>
+            <p class="comunity_T"><b>•</b> <b>Открытый код:</b> GitHub является популярной платформой для размещения открытых проектов, где разработчики могут совместно решать проблемы и улучшать код.<br><b>•</b> <b>Социальные функции:</b> Пользователи могут следить за другими разработчиками и репозиториями, оставлять звезды (stars) и форки, участвовать в обсуждениях.
+                </p>
+        </section>
+
+        <section class="intsub">
+            <div class="intsub-container">
+                <div class="intsub-container_left">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M21 5c0-1.103-.897-2-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2V5zM5 19V5h14l.002 14H5z"></path><path d="M7 7h1.998v2H7zm4 0h6v2h-6zm-4 4h1.998v2H7zm4 0h6v2h-6zm-4 4h1.998v2H7zm4 0h6v2h-6z"></path></svg>
+                    <h2 class="intsub_int_Z">Интерфейс и интеграции</h2>
+                    <p class="intsub_int_T"><b>1.</b> <b>GitHub Desktop:</b> Настольное приложение для управления репозиториями, упрощающее использование Git.<br> <b>2.</b> <b>Интеграции:</b> GitHub поддерживает множество интеграций с внешними инструментами, такими как CI/CD сервисы, мессенджеры и другие платформы разработки.</p>
+                </div>
+
+                <div class="intsub-container_right">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path d="M15.999 8.5h2c0-2.837-2.755-4.131-5-4.429V2h-2v2.071c-2.245.298-5 1.592-5 4.429 0 2.706 2.666 4.113 5 4.43v4.97c-1.448-.251-3-1.024-3-2.4h-2c0 2.589 2.425 4.119 5 4.436V22h2v-2.07c2.245-.298 5-1.593 5-4.43s-2.755-4.131-5-4.429V6.1c1.33.239 3 .941 3 2.4zm-8 0c0-1.459 1.67-2.161 3-2.4v4.799c-1.371-.253-3-1.002-3-2.399zm8 7c0 1.459-1.67 2.161-3 2.4v-4.8c1.33.239 3 .941 3 2.4z"></path></svg>
+                    <h2 class="intsub_sub_Z">Подписки и тарифы</h2>
+                    <p class="intsub_T"><b>1.</b> <b>Бесплатный тариф:</b> Доступ к основным функциям для открытых и частных репозиториев.<br><b>2.</b> <b>Платные тарифы:</b> Дополнительные функции для командной работы и управления большими проектами, включая расширенные инструменты управления.</p>
+                </div>
+            </div>
+        </section>
+
+        
     </main>
 </body>
 </html>
