Закончили работы с секциями

--- a/index.html
+++ b/index.html
@@ -75,7 +75,30 @@
             </div>
         </section>
 
-        
+        <section class="reg">
+            <h2 class="reg_Z">Регистрация на GitHub</h2>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;"><path fill-rule="evenodd" clip-rule="evenodd" d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z"></path></svg>
+            <p class="reg_T"><b>Шаг 1:</b> Перейти на сайт
+                Откройте веб-браузер и перейдите на github.com.
+                <br><b>Шаг 2:</b> Нажать на кнопку "Sign up"
+                На главной странице нажмите на кнопку "Sign up" в правом верхнем углу.
+                <br><b>Шаг 3:</b> Ввод адреса электронной почты
+                Введите свой адрес электронной почты. Убедитесь, что он актуален, поскольку на него может быть отправлено подтверждение.
+                <br><b>Шаг 4:</b> Создание пароля
+                Придумайте и введите надежный пароль. GitHub рекомендует использовать пароль длиной не менее 15 символов или сочетание из 12 символов и символов в верхнем регистре.
+                <br><b>Шаг 5:</b> Выбор имени пользователя
+                Выберите уникальное имя пользователя. Оно будет отображаться на вашей странице профиля и использоваться в URL ваших репозиториев.
+                <br><b>Шаг 6:</b> Проверка аккаунта
+                GitHub может попросить вас подтвердить, что вы не робот, обычно через капчу (например, выбрать картинки с транспортом).
+                <br><b>Шаг 7:</b> Выбор плана
+                Выберите желаемый тарифный план. GitHub предлагает бесплатный тариф с доступом к основным функциям и платные планы с дополнительными возможностями.
+                <br><b>Шаг 8:</b> Настройка профиля
+                Следуйте инструкциям для настройки профиля. Вы можете указать свои интересы, настройки уведомлений и другие параметры.
+                <br><b>Шаг 9:</b> Подтверждение аккаунта
+                После завершения регистрации проверьте свою электронную почту и подтвердите адрес, если это требуется. Это важно для активации вашего аккаунта.
+                <br><b>Шаг 10:</b> Начните использовать GitHub
+                После подтверждения вы можете войти в свой аккаунт и начать работу с проектами, создавать новые репозитории и исследовать другие функции.</p>
+        </section>
     </main>
 </body>
 </html>
