--- a/index.html
+++ b/index.html
@@ -102,5 +102,13 @@
                 После подтверждения вы можете войти в свой аккаунт и начать работу с проектами, создавать новые репозитории и исследовать другие функции.</p>
         </section>
     </main>
+    <footer>
+        <div class="footer__container">
+            <h2 class="footer__title">Артём Смирнов 
+            </h2>
+            <p class="footer__txt">CП-1-22</p>
+            <p class="footer__date">© 2024 GitHub</p>
+        </div>
+    </footer>
 </body>
 </html>
