--- a/index.html
+++ b/index.html
@@ -104,10 +104,15 @@
     </main>
     <footer>
         <div class="footer__container">
+            <div class="footer__img">
+            <img src="./github-logo_icon-icons.com_73546.svg" class="logo" alt="">
+        </div>
+        <div class="footer__text">
             <h2 class="footer__title">Артём Смирнов 
             </h2>
             <p class="footer__txt">CП-1-22</p>
             <p class="footer__date">© 2024 GitHub</p>
+        </div>
         </div>
     </footer>
 </body>
