--- a/index.html
+++ b/index.html
@@ -106,12 +106,13 @@
         <div class="footer__container">
             <div class="footer__img">
             <img src="./github-logo_icon-icons.com_73546.svg" class="logo" alt="">
+            <img src="./группа.svg" alt="" class="grup">
         </div>
         <div class="footer__text">
             <h2 class="footer__title">Артём Смирнов 
             </h2>
-            <p class="footer__txt">CП-1-22</p>
-            <p class="footer__date">© 2024 GitHub</p>
+            <p class="footer__txt">© 2024 GitHub</p>
+            <p class="footer__date">CП-1-22</p>
         </div>
         </div>
     </footer>
