Адаптив всего сайта

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
 
         <section class="Wgithub">
-            <div class="Wgithub-container"></div>
+            <div class="Wgithub-container">
                 <h2 class="Wgithub_Z">Чем отличается Git от GitHub?</h2>
                 <p class="Wgithub_T">Git — это система контроля версий, а GitHub — онлайн-сервис, по сути социальная сеть. Одна из основных целей GitHub — быть единым местом для проектов с исходным кодом. Предполагается, что пользователь делится чем-то полезным, а другие люди смогут участвовать в разработке. <br> Ещё один вариант — использовать GitHub как хранилище проектов для портфолио: легко дать на них ссылку.</p>
             </div>
